k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hostel-allocation
  labels:
    name: hostel-allocation
